--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,68 +3,9 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  gap: 2rem;
+  padding: 2rem;
   min-height: 100vh;
 }
 
-.description {
-  display: flex;
-  justify-content: start;
-  align-items: start;
-  flex-direction: column;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-  
-}
 
-.card{
-  width: 200px;
-  height: 350px;
-  display: flex;  
-  flex-direction: column;
-  align-items: center;
-
-  gap: 16px;
-
-  padding: 10px 20px;
-
-  border: solid 1px black;
-  border-radius: 0.25rem;
-}
-.cardDescription{
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
