--- a/src/components/Card/styles.module.css
+++ b/src/components/Card/styles.module.css
@@ -38,6 +38,9 @@
 
   .cardTitle .favorite{
     cursor: pointer;
+    border: none;
+    outline: 0;
+    background-color: transparent;
   }
   
   .characterStatus{
