--- a/src/components/Filter/styles.module.css
+++ b/src/components/Filter/styles.module.css
@@ -1,11 +1,15 @@
 .filter{
+  width: 100%;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 0.5rem;
 }
 
 .filter form{
+  width: 70%;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
 }
@@ -21,12 +25,23 @@
   max-width: 30rem;
   font-size: 1rem;
   line-height: 1.25rem;
+  text-align: center;
+
+  background-color: transparent;
+  border: white solid 1px;
+  color: white;
   
-  border-radius: 0.5rem;
+  border-radius: 2rem;
   padding: 0.5rem 1.25rem;
 
-  border: none;
+  width: 54rem;
+
   outline: 0;
+}
+
+.filter input::placeholder{
+  color: white;
+  opacity: 1;
 }
 
 .filter select{
@@ -41,25 +56,27 @@
 }
 
 .filter button{
-  width: 100%;
-  max-width: 10rem;
-  font-size: 1rem;
-  line-height: 1.25rem;
-  
-  border-radius: 0.5rem;
-  padding: 0.5rem 1.25rem;
-
-  border: solid 1px transparent;
-  outline: 0;
-  cursor: pointer;
-  background-color: #c3c3c3;
-  color:white;
+  font-style: normal;
   font-weight: 700;
+  font-size: 22px;
+  line-height: 27px;
+
+  text-align: center;
+
+
+  padding: 0.5rem 2rem;
+
+  background: #FFFFFF;
+  border-radius: 40px;
+
+  filter: drop-shadow(0px 9px 28px rgba(255, 255, 255, 0.1));
 }
 
-.filter button:hover{
-  background-color: #c3c3c333;
-  border: solid 1px #c3c3c3;
+.filter button span{
+  background: linear-gradient(180deg, #A7CB54 0%, #030028 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .filter label{
@@ -70,6 +87,11 @@
   cursor: pointer;
 
 }
+
 .filter label input{
   width: 30px;
+}
+
+.filter select {
+  display: none;
 }
