--- a/src/components/Favorites/styles.module.css
+++ b/src/components/Favorites/styles.module.css
@@ -1,11 +1,20 @@
 .main {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     gap: 2rem;
     padding: 2rem;
-  }
+}
+
+.container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
   
   
   
