--- a/src/components/Filter/styles.module.css
+++ b/src/components/Filter/styles.module.css
@@ -7,22 +7,15 @@
 }
 
 .filter form{
-  width: 70%;
+  width: 100%;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
   gap: 1rem;
-}
-
-.filter .title{
-  width: 100%;
-  font-size: 1.25rem;
-  line-height: 2rem;
 }
 
 .filter input{
   width: 100%;
-  max-width: 30rem;
+  max-width: 54rem;
   font-size: 1rem;
   line-height: 1.25rem;
   text-align: center;
@@ -33,9 +26,6 @@
   
   border-radius: 2rem;
   padding: 0.5rem 1.25rem;
-
-  width: 54rem;
-
   outline: 0;
 }
 
@@ -56,20 +46,19 @@
 }
 
 .filter button{
-  font-style: normal;
-  font-weight: 700;
-  font-size: 22px;
-  line-height: 27px;
-
-  text-align: center;
-
-
-  padding: 0.5rem 2rem;
-
+  padding: 0.2rem 1rem;
   background: #FFFFFF;
   border-radius: 40px;
+  
+  font-style: normal;
+  font-weight: 700;
+  font-size: 0.8rem;
+  line-height: 150%;
+  text-align: center;
 
   filter: drop-shadow(0px 9px 28px rgba(255, 255, 255, 0.1));
+  cursor: pointer; 
+  outline: 0;
 }
 
 .filter button span{
@@ -94,4 +83,11 @@
 
 .filter select {
   display: none;
+}
+
+@media (min-width: 768px){
+  .filter button{
+    font-size: 1.3rem;
+    padding: 0.5rem 2rem;
+  }
 }
