--- a/src/components/CharacterList/style.module.css
+++ b/src/components/CharacterList/style.module.css
@@ -1,13 +1,10 @@
-
-
-.characters {
+.main {
   width: 100%;
   padding: 0 1rem;
   margin-top: -2rem;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: start;
+  gap: 5rem;
 }
 
