--- a/src/components/Favorites/styles.module.css
+++ b/src/components/Favorites/styles.module.css
@@ -1,20 +1,7 @@
 .main {
     width: 100%;
+    padding: 0 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 2rem;
-    padding: 2rem;
+    gap: 5rem;
 }
-
-.container{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-  
-  
-  
