--- a/src/components/ListCards/styles.module.css
+++ b/src/components/ListCards/styles.module.css
@@ -13,7 +13,7 @@
   }
 
   .main::-webkit-scrollbar {
-    width: 16px;
+    width: 1rem;
   }
 
   .main::-webkit-scrollbar-track {
@@ -22,7 +22,7 @@
 
   .main::-webkit-scrollbar-thumb {
     background-color: #030028;
-    border-radius: 10px;
+    border-radius: 0.625rem;
     border: 3px solid #ffffff;
   }
 
