--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -10,7 +10,7 @@
 
     background-color: transparent;
 
-    background-image: url('../../../public/bg.png');
+    background-image: url('../../../public/void.png');
     background-position: top left;
     background-repeat: no-repeat;
     background-size: cover;
