--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -5,11 +5,27 @@
     padding: 1rem 2rem;
     
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 0.25rem;
 
-    background-color: #fdfdfd;
+    color: #fdfdfd;
     box-shadow: 0rem 0rem 0.5rem #00000033;
     box-sizing: border-box;
+
+    background-image: url('../../../public/void.png');
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.socialMedia{
+    display: flex;
+    gap: 1rem;
+}
+
+.socialMedia .icone{
+    width: 60px;
+    height: 60px;
 }
