--- a/src/components/Pagination/styles.module.css
+++ b/src/components/Pagination/styles.module.css
@@ -21,11 +21,10 @@
     font-size: 0.8rem;
     line-height: 130%;
     background: #FFFFFF;
-    border-radius: 40px;
+    border: none;
+    
     text-align: center;
-  
     padding: 0.1rem 1rem;
-
     filter: drop-shadow(0px 9px 28px rgba(255, 255, 255, 0.1));
   }
   
