--- a/src/pages/character/styles.module.css
+++ b/src/pages/character/styles.module.css
@@ -1,8 +1,9 @@
 .main{
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     margin-top: 2rem;
     padding: 5rem 1rem;
     gap:1rem;
