--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -1,6 +1,16 @@
 .main{
     width: 100%;
     max-width: 1440px;
+    gap: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+.footer{
+    width: 100%;
     height: 10rem;
     padding: 1rem 2rem;
     
