--- a/src/components/CharacterList/style.module.css
+++ b/src/components/CharacterList/style.module.css
@@ -5,6 +5,13 @@
 
   display: flex;
   flex-direction: column;
-  gap: 5rem;
+  gap: 3rem;
 }
 
+.notFound{
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
