--- a/src/components/Favorites/styles.module.css
+++ b/src/components/Favorites/styles.module.css
@@ -3,5 +3,14 @@
     padding: 0 1rem;
     display: flex;
     flex-direction: column;
-    gap: 5rem;
+
+    gap: 1rem;
+}
+
+.notFound{
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
