--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -3,6 +3,8 @@
     max-width: 1440px;
     gap: 2rem;
 
+    margin-top: 2rem;
+
     display: flex;
     flex-direction: column;
     align-items: center;
