--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -26,7 +26,7 @@
     box-shadow: 0rem 0rem 0.5rem #00000033;
     box-sizing: border-box;
 
-    background-image: url('../../../public/void.png');
+    background-image: url('../../../public/void.webp');
     background-position: top left;
     background-repeat: no-repeat;
     background-size: cover;
