--- a/src/components/Hero/styles.module.css
+++ b/src/components/Hero/styles.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     margin-top: 5rem;
     
-    background-image: url('../../../public/bg.png');
+    background-image: url('../../../public/bg.webp');
     background-position: top left;
     background-repeat: no-repeat;
     background-size: cover;
@@ -13,7 +13,7 @@
 .logo{
     width: 100%;
     min-height: 370px;
-    background-image: url('../../../public/rick_and_morty_logo.png');
+    background-image: url('../../../public/rick_and_morty_logo.webp');
     background-position: top center;
     background-repeat: no-repeat;
     background-size: contain;   
